--- a/src/app/sticker-management/components/sticker-create/sticker-create.component.html
+++ b/src/app/sticker-management/components/sticker-create/sticker-create.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <app-sticker-form [sticker]="stiker" (submit)="save($event)"></app-sticker-form>
+    <app-sticker-form [sticker]="sticker" (submit)="save($event)"></app-sticker-form>
 </div>
