--- a/src/app/sticker-management/components/sticker-form/sticker-form.component.html
+++ b/src/app/sticker-management/components/sticker-form/sticker-form.component.html
@@ -1,16 +1,12 @@
-<div>
-    <form (submit)="onSubmit()">
+    <form (submit)="onSubmit()" class="in_form">
         <div class="form-group">
             <label for="Name">Note: </label>
             <input type="text" class="form-control" [(ngModel)]="sticker.Name" name="Name" #Name="ngModel" />
-            <label>{{sticker.Name}}</label>
         </div>
         <div class="form-group">
-            <label for="Body">Note: </label>
+            <label for="Body">Body: </label>
             <input type="text" class="form-control" [(ngModel)]="sticker.Body" name="Body" #Name="ngModel" />
-            <label>{{sticker.Name}}</label>
         </div>
         <button type="button" (click)="onBack()" class="btn btn-default">Back</button>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
-</div>
