--- a/src/app/sticker-management/components/sticker-list/sticker-list.component.html
+++ b/src/app/sticker-management/components/sticker-list/sticker-list.component.html
@@ -1,15 +1,13 @@
 <div class="container">
-        <div class="row" *ngFor="let sticker of list">
-            <div class="col-md-3">{{ sticker.Id }}</div>
-            <div class="col-md-3">{{ sticker.Name }}</div>
-            <div class="col-md-3">{{ sticker.Body }}</div>
-            <div class="col-md-3">{{ sticker.CreationDate }}</div>
-            <div class="col-md-3">{{ sticker.ChangeDate }}</div>
-            <div class="col-md-3">{{ sticker.IsComplete }}</div>
-            <div class="col-md-3">
+        <div class="row note" *ngFor="let sticker of list">
+            <div class="col-md-3 noteCaption">{{ sticker.Name }}</div>
+            <div class="col-md-3 noteBody">{{ sticker.Body }}</div>
+            <div class="col-md-3 noteCrDate">{{ sticker.CreationDate }}</div>
+            <div class="col-md-3 noteCDate">{{ sticker.ChangeDate }}</div>
+            <div class="col-md-3 controls">
                 <button type="button" (click)="update(sticker.Id)" class="btn btn-default">Edit</button>
                 <button type="button" (click)="delete(sticker.Id)" class="btn btn-default">Delete</button>
             </div>
         </div>
-    </div>
-    <button type="button" (click)="add()" class="btn btn-primary">Add</button>
+</div>
+<button type="button" (click)="add()" class="btn btn-primary addnew">Add</button>
