--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,6 @@ body, html {
     font-family: Helvetica;
     margin: 0; padding: 0;
 
-    button, input {
-        outline: none;
-        background-color: transparent;
-        border: none;
-    }
-
     button {
         cursor: pointer;
     }
@@ -23,6 +17,20 @@ body, html {
     }
 }
 
+body {
+    padding-top: 80px;
+}
+
+input {
+    border: 2px solid #000;
+    font-size: 1.2em;
+    padding: 5px 13px;
+}
+
+#search-box {
+    margin-top: 10px;
+}
+
 .header {
     position: fixed;
     left: 0; top: 0;
@@ -30,15 +38,31 @@ body, html {
     width: 100vw;
     background-color: #9C64E8;
     display: flex;
+    justify-content: space-between;
     z-index: 2;
+    
+
+    a {
+        line-height: 60px;
+    }
+
+    .date {
+        display: inline;
+        line-height: 60px;
+    }
 
     .logo {
         font-size: 1.5em;
     }
 }
 
+.alink {
+    display: block;
+    max-width: 300px;
+}
+
 .container {
-    padding-top: 35px;
+    
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -60,7 +84,7 @@ body, html {
     z-index: 3;
  }
 
- .note {
+ .sticker {
      min-width: 300px;
      background: url("./sticker.jpg");
      background-size: contain;
